# bangumi-tracker.rs

./: .gitignore  Cargo.toml
bangumi_tracker/: Cargo.toml
bangumi_tracker/src/: errors.rs  main.rs  state.rs
bangumi_tracker/src/downloaders/: aria2.rs  mod.rs
bangumi_tracker/src/models/: common.rs  requests.rs  responses.rs
bangumi_tracker/src/routes/: bangumi.rs  mod.rs  torrent.rs
bangumi_tracker/src/sources/: mod.rs
bangumi_tracker_derive/: Cargo.toml
bangumi_tracker_derive/src/: lib.rs
kei/: Cargo.toml
kei/src/: errors.rs  main.rs  state.rs  utils.rs
kei/src/downloaders/: aria2.rs  mod.rs
kei/src/models/: requests.rs  responses.rs
kei/src/routes/: bangumi.rs  download.rs  mod.rs  torrent.rs
kei/src/sources/: bangumi_moe.rs  mod.rs
kei_derive/: Cargo.toml
