[package]
name = "bangumi_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4.24", features = ["serde"] }
bangumi_tracker_derive = { path = "../bangumi_tracker_derive"}
thiserror = "1.0.39"
tracing-subscriber = "0.3"
env_logger = "0.10.0"
log = "0.4.17"
uuid = { version = "1.3.0", features = ["v4"] }
